[gd_scene load_steps=3 format=3 uid="uid://b1tohpnjxxivm"]

[ext_resource type="Script" path="res://main.gd" id="1_pkq1o"]
[ext_resource type="Script" path="res://Steam.gd" id="3_kwy4m"]

[node name="Main" type="Node"]

[node name="Host" type="Node" parent="."]
unique_name_in_owner = true

[node name="Steam" type="Node" parent="."]
script = ExtResource("3_kwy4m")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkq1o")

[node name="ItemList" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -256.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LAN" type="Button" parent="MainMenu/ItemList"]
layout_mode = 2
text = "LAN"

[node name="Host" type="Button" parent="MainMenu/ItemList"]
layout_mode = 2
text = "Host"

[node name="TextEdit" type="TextEdit" parent="MainMenu/ItemList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Enter Lobby ID"

[node name="Join" type="Button" parent="MainMenu/ItemList"]
layout_mode = 2
text = "Join"

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 66
text = "ID"
horizontal_alignment = 3
vertical_alignment = 3

[connection signal="pressed" from="MainMenu/ItemList/LAN" to="MainMenu" method="_on_lan_pressed"]
[connection signal="pressed" from="MainMenu/ItemList/Host" to="MainMenu" method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/ItemList/Join" to="MainMenu" method="_on_join_pressed"]
